<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_ffffff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:background="@color/color_ffffff"
            android:orientation="vertical"
            android:padding="@dimen/dimen_15"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:background="@drawable/border_radious_red_edittex"
                android:fontFamily="@font/lato"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:includeFontPadding="false"
                android:inputType="text"
                android:padding="@dimen/dimen_15"
                android:textColor="@color/color_272727"
                android:textColorHint="@color/color_B6B6B6"
                android:textSize="@dimen/font_16" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:background="@drawable/border_radious_red_edittex"
                android:fontFamily="@font/lato"
                android:hint="@string/email_address"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dimen_15"
                android:textColor="@color/color_272727"
                android:textColorHint="@color/color_B6B6B6"
                android:textSize="@dimen/font_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txtSubscribe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_5"
                    android:layout_weight="1"
                    android:background="@drawable/border_rounded_red_button"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="@dimen/dimen_15"
                    android:text="@string/subscribe"
                    android:textColor="@color/color_ffffff"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/txtCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_weight="1"
                    android:background="@drawable/border_rounded_black"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="@dimen/dimen_15"
                    android:text="@string/cancel"
                    android:textColor="@color/color_ffffff"
                    android:textSize="@dimen/font_16" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</layout>
